udev log priority reduced

--- a/examples/amd/10_arch_linux.conf
+++ b/examples/amd/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-02-22T10:12:15+0100
+# date:   2024-02-24T08:46:53+0100
 
 # use version number in entry
 version_number=false
@@ -17,8 +17,8 @@ options="
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 
     # logging
+    udev.log_priority=3
     loglevel=3
-    #udev.log_priority=3
     #quiet
 
     # mitigations
