--- a/examples/intel/20_arch_linux_hardened.conf
+++ b/examples/intel/20_arch_linux_hardened.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/20_arch_linux_hardened.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-02-22T10:13:05+0100
+# date:   2024-02-24T08:47:27+0100
 
 # use version number in entry
 version_number=false
@@ -17,8 +17,8 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # logging
+    udev.log_priority=3
     loglevel=3
-    #udev.log_priority=3
     #quiet
 
     # mitigations
