kernel parameter for logging reactivated

--- a/examples/intel/20_arch_linux_hardened.conf
+++ b/examples/intel/20_arch_linux_hardened.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/20_arch_linux_hardened.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-02-24T08:47:27+0100
+# date:   2024-04-02T10:39:50+0200
 
 # use version number in entry
 version_number=false
@@ -19,7 +19,7 @@ options="
     # logging
     udev.log_priority=3
     loglevel=3
-    #quiet
+    quiet
 
     # mitigations
     mitigations=off
