--- a/examples/amd/30_arch_linux_lts.conf
+++ b/examples/amd/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-02-24T08:47:07+0100
+# date:   2024-04-02T10:39:36+0200
 
 # use version number in entry
 version_number=false
@@ -19,7 +19,7 @@ options="
     # logging
     udev.log_priority=3
     loglevel=3
-    #quiet
+    quiet
 
     # mitigations
     mitigations=off
