--- a/examples/intel/10_arch_linux.conf
+++ b/examples/intel/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-02-24T08:47:21+0100
+# date:   2024-04-02T10:39:43+0200
 
 # use version number in entry
 version_number=false
@@ -19,7 +19,7 @@ options="
     # logging
     udev.log_priority=3
     loglevel=3
-    #quiet
+    quiet
 
     # mitigations
     mitigations=off
