bluetooth blacklisting changed and version number cut replaced by grep

--- a/examples/intel/10_arch_linux.conf
+++ b/examples/intel/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-04-04T08:51:35+0200
+# date:   2024-11-19T07:33:09+0100
 
 # use version number in entry
 version_number=false
@@ -35,18 +35,14 @@ options="
     modprobe.blacklist=iTCO_wdt
 
     # disable bluetooth
-    modprobe.blacklist=bnep
-    modprobe.blacklist=bluetooth
-    modprobe.blacklist=btusb
+    modprobe.blacklist=bnep,bluetooth,btusb
 "
 
 # version number
 [ $version_number = true ] \
     && package_version="$( \
         pacman -Q --color never "linux" \
-            | cut -d ' ' -f2 \
-            | cut -d '.' -f-3 \
-            | cut -d '-' -f1 \
+            | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' \
     )" \
     && label="Arch Linux $package_version" \
     && unset package_version
