--- a/examples/amd/10_arch_linux.conf
+++ b/examples/amd/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-04-04T08:50:47+0200
+# date:   2024-11-19T07:32:43+0100
 
 # use version number in entry
 version_number=false
@@ -38,9 +38,7 @@ options="
 [ $version_number = true ] \
     && package_version="$( \
         pacman -Q --color never "linux" \
-            | cut -d ' ' -f2 \
-            | cut -d '.' -f-3 \
-            | cut -d '-' -f1 \
+            | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' \
     )" \
     && label="Arch Linux $package_version" \
     && unset package_version
