--- a/examples/intel/31_arch_linux_lts_fallback.conf
+++ b/examples/intel/31_arch_linux_lts_fallback.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/31_arch_linux_lts_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-04-04T08:51:56+0200
+# date:   2024-11-19T07:33:27+0100
 
 # use version number in entry
 version_number=false
@@ -20,9 +20,7 @@ options="
 [ $version_number = true ] \
     && package_version="$( \
         pacman -Q --color never "linux-lts" \
-            | cut -d ' ' -f2 \
-            | cut -d '.' -f-3 \
-            | cut -d '-' -f1 \
+            | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+' \
     )" \
     && label="Arch Linux $package_version LTS Fallback" \
     && unset package_version
