--- a/examples/intel/30_arch_linux_lts.conf
+++ b/examples/intel/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-11-19T07:33:24+0100
+# date:   2024-12-10T16:29:02+0100
 
 # use version number in entry
 version_number=false
@@ -16,16 +16,16 @@ options="
     root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # logging
-    udev.log_priority=3
-    loglevel=3
-    quiet
+    #udev.log_priority=3
+    #loglevel=3
+    #quiet
 
     # mitigations
     mitigations=off
     i915.mitigations=off
 
     # gpu
-    i915.enable_guc=2
+    #i915.enable_guc=2
 
     # cpu
     #intel_pstate=disable
