--- a/examples/amd/30_arch_linux_lts.conf
+++ b/examples/amd/30_arch_linux_lts.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/30_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-11-19T07:33:00+0100
+# date:   2024-12-10T13:08:13+0100
 
 # use version number in entry
 version_number=false
@@ -16,9 +16,9 @@ options="
     root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
 
     # logging
-    udev.log_priority=3
-    loglevel=3
-    quiet
+    #udev.log_priority=3
+    #loglevel=3
+    #quiet
 
     # mitigations
     mitigations=off
