--- a/examples/intel/20_arch_linux_lts.conf
+++ b/examples/intel/20_arch_linux_lts.conf
@@ -1,19 +1,19 @@
-# path:   /home/klassiker/.local/share/repos/efistub/examples/amd/30_arch_linux_lts.conf
+# path:   /home/klassiker/.local/share/repos/efistub/examples/intel/20_arch_linux_lts.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-12-10T13:08:13+0100
+# date:   2025-05-04T05:40:59+0200
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
 label="Arch Linux LTS"
-disk="/dev/nvme0n1"
+disk="/dev/sda1"
 loader="/vmlinuz-linux-lts"
 
 options="
     initrd=/initramfs-linux-lts.img
-    root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
+    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
 
     # logging
     #udev.log_priority=3
@@ -22,16 +22,20 @@ options="
 
     # mitigations
     mitigations=off
+    i915.mitigations=off
+
+    # gpu
+    #i915.enable_guc=2
 
     # cpu
-    #amd_pstate=disable
+    #intel_pstate=disable
 
     # disable watchdog
     nowatchdog
-    modprobe.blacklist=sp5100_tco
+    modprobe.blacklist=iTCO_wdt
 
-    # disable beeper
-    modprobe.blacklist=pcspkr
+    # disable bluetooth
+    modprobe.blacklist=bnep,bluetooth,btusb
 "
 
 # version number
