--- a/examples/intel/10_arch_linux.conf
+++ b/examples/intel/10_arch_linux.conf
@@ -1,14 +1,14 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2024-11-19T07:33:09+0100
+# date:   2025-05-17T05:49:38+0200
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
 label="Arch Linux"
-disk="/dev/sda1"
+disk="/dev/nvme0n1p1"
 loader="/vmlinuz-linux"
 
 options="
