--- a/examples/intel/21_arch_linux_lts_fallback.conf
+++ b/examples/intel/21_arch_linux_lts_fallback.conf
@@ -1,14 +1,14 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/21_arch_linux_lts_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2025-05-04T05:41:04+0200
+# date:   2025-05-17T05:49:50+0200
 
 # use version number in entry
 version_number=false
 
 # efibootmgr options
 label="Arch Linux LTS Fallback"
-disk="/dev/sda1"
+disk="/dev/nvme0n1p1"
 loader="/vmlinuz-linux-lts"
 
 options="
