--- a/examples/intel/10_arch_linux.conf
+++ b/examples/intel/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/10_arch_linux.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2025-05-17T05:49:38+0200
+# date:   2025-05-26T05:11:22+0200
 
 # use version number in entry
 version_number=false
@@ -12,8 +12,10 @@ disk="/dev/nvme0n1p1"
 loader="/vmlinuz-linux"
 
 options="
+    # root uuid command substition should be used with caution!!!
     initrd=/initramfs-linux.img
-    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+    #root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+    root=UUID=$(lsblk -Q 'MOUNTPOINT == "/"' -n -o UUID $disk) rw
 
     # logging
     udev.log_priority=3
