--- a/examples/intel/11_arch_linux_fallback.conf
+++ b/examples/intel/11_arch_linux_fallback.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/intel/11_arch_linux_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2025-05-17T05:49:42+0200
+# date:   2025-05-26T05:11:26+0200
 
 # use version number in entry
 version_number=false
@@ -12,8 +12,10 @@ disk="/dev/nvme0n1p1"
 loader="/vmlinuz-linux"
 
 options="
+    # root uuid command substition should be used with caution!!!
     initrd=/initramfs-linux-fallback.img
-    root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+    #root=UUID=5b21fe4a-3cae-4150-91bc-bf1d5ddbe03a rw
+    root=UUID=$(lsblk -Q 'MOUNTPOINT == "/"' -n -o UUID $disk) rw
 "
 
 # version number
