--- a/examples/amd/11_arch_linux_fallback.conf
+++ b/examples/amd/11_arch_linux_fallback.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/11_arch_linux_fallback.conf
 # author: klassiker [mrdotx]
 # github: https://github.com/mrdotx/efistub
-# date:   2025-05-26T05:11:09+0200
+# date:   2025-05-26T05:15:13+0200
 
 # use version number in entry
 version_number=false
@@ -12,7 +12,7 @@ disk="/dev/nvme0n1"
 loader="/vmlinuz-linux-fallback"
 
 options="
-    # root uuid command substition should be used with caution!!!
+    # root uuid command substitution should be used with caution!!!
     initrd=/initramfs-linux-fallback.img
     #root=UUID=eac98ebd-4d98-4276-88d1-bbaf9130c2e0 rw
     root=UUID=$(lsblk -Q 'MOUNTPOINT == "/"' -n -o UUID $disk) rw
