github: replaced by url:

--- a/examples/amd/21_arch_linux_lts_fallback.conf
+++ b/examples/amd/21_arch_linux_lts_fallback.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/21_arch_linux_lts_fallback.conf
 # author: klassiker [mrdotx]
-# github: https://github.com/mrdotx/efistub
-# date:   2025-05-26T05:15:34+0200
+# url:    https://github.com/mrdotx/efistub
+# date:   2025-08-06T05:16:21+0200
 
 # use version number in entry
 version_number=false
