--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # path:   /home/klassiker/.local/share/repos/efistub/.gitignore
 # author: klassiker [mrdotx]
-# github: https://github.com/mrdotx/efistub
-# date:   2022-12-23T13:59:48+0100
+# url:    https://github.com/mrdotx/efistub
+# date:   2025-08-06T05:15:45+0200
 
 /entries
