--- a/examples/amd/10_arch_linux.conf
+++ b/examples/amd/10_arch_linux.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/amd/10_arch_linux.conf
 # author: klassiker [mrdotx]
-# github: https://github.com/mrdotx/efistub
-# date:   2025-05-26T05:15:03+0200
+# url:    https://github.com/mrdotx/efistub
+# date:   2025-08-06T05:16:11+0200
 
 # use version number in entry
 version_number=false
