--- a/examples/other/90_memtest86.conf
+++ b/examples/other/90_memtest86.conf
@@ -1,7 +1,7 @@
 # path:   /home/klassiker/.local/share/repos/efistub/examples/other/90_memtest86.conf
 # author: klassiker [mrdotx]
-# github: https://github.com/mrdotx/efistub
-# date:   2022-12-23T13:50:46+0100
+# url:    https://github.com/mrdotx/efistub
+# date:   2025-08-06T05:16:41+0200
 
 # use version number in entry
 version_number=false
